[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fdbck"
version = "0.1.0"
description = "Official Python SDK for the fdbck API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "fdbck", email = "hello@fdbck.sh" }]
keywords = ["fdbck", "feedback", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.21"]

[project.urls]
Homepage = "https://fdbck.sh"
Documentation = "https://docs.fdbck.sh"
Repository = "https://github.com/fdbck-sh/fdbck-python"

[tool.hatch.build.targets.wheel]
packages = ["src/fdbck"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
